[gd_scene load_steps=4 format=3 uid="uid://vl7aj3126cpf"]

[ext_resource type="Script" path="res://challenges/orthography/orthography.gd" id="1_lcd18"]
[ext_resource type="Theme" uid="uid://inr4tcdwqeln" path="res://game_theme.tres" id="1_rcbte"]
[ext_resource type="PackedScene" uid="uid://bf14kfetgi42a" path="res://challenges/difficulty_picker.tscn" id="2_bn80i"]

[node name="Orthography" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rcbte")
script = ExtResource("1_lcd18")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyPicker" parent="MarginContainer" instance=ExtResource("2_bn80i")]
unique_name_in_owner = true
layout_mode = 2

[node name="Challenge" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Challenge"]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 72
text = "Uzupełnij luki właściwymi literami"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Challenge"]
layout_mode = 2
theme_override_constants/separation = 320
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Challenge/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="WordsContainer" type="HBoxContainer" parent="MarginContainer/Challenge/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 224)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 128
alignment = 1

[node name="CheckButton" type="Button" parent="MarginContainer/Challenge/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Sprawdź"

[connection signal="difficulty_picked" from="MarginContainer/DifficultyPicker" to="." method="_on_difficulty_picked"]
[connection signal="pressed" from="MarginContainer/Challenge/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
